crates/catalog/src/tests/snapshots/information_schema_navigation_tree.snap
---
source: crates/catalog/src/tests/information_schema.rs
description: "SELECT * FROM embucket.information_schema.navigation_tree ORDER BY database, schema, table"
---
+----------+--------------------+-----------------+------------+
| database | schema             | table           | table_type |
+----------+--------------------+-----------------+------------+
| embucket |                    |                 |            |
| embucket | information_schema | columns         | VIEW       |
| embucket | information_schema | databases       | VIEW       |
| embucket | information_schema | df_settings     | VIEW       |
| embucket | information_schema | navigation_tree | VIEW       |
| embucket | information_schema | parameters      | VIEW       |
| embucket | information_schema | routines        | VIEW       |
| embucket | information_schema | schemata        | VIEW       |
| embucket | information_schema | tables          | VIEW       |
| embucket | information_schema | views           | VIEW       |
| embucket | public             |                 |            |
| embucket | public             | first           | TABLE      |
| embucket | public             | second          | TABLE      |
+----------+--------------------+-----------------+------------+
