crates/catalog/src/tests/snapshots/information_schema_schemata.snap
---
source: crates/catalog/src/tests/information_schema.rs
description: SELECT * FROM embucket.information_schema.schemata
---
+--------------+--------------------+--------------+-------------------------------+------------------------------+----------------------------+----------+
| catalog_name | schema_name        | schema_owner | default_character_set_catalog | default_character_set_schema | default_character_set_name | sql_path |
+--------------+--------------------+--------------+-------------------------------+------------------------------+----------------------------+----------+
| embucket     | information_schema |              |                               |                              |                            |          |
| embucket     | public             |              |                               |                              |                            |          |
+--------------+--------------------+--------------+-------------------------------+------------------------------+----------------------------+----------+
