crates/catalog/src/tests/snapshots/information_schema_tables.snap
---
source: crates/catalog/src/tests/information_schema.rs
description: SELECT * FROM embucket.information_schema.tables
---
+---------------+--------------------+-----------------+------------+------------+
| table_catalog | table_schema       | table_name      | table_type | is_iceberg |
+---------------+--------------------+-----------------+------------+------------+
| embucket      | information_schema | columns         | VIEW       | N          |
| embucket      | information_schema | databases       | VIEW       | N          |
| embucket      | information_schema | df_settings     | VIEW       | N          |
| embucket      | information_schema | navigation_tree | VIEW       | N          |
| embucket      | information_schema | parameters      | VIEW       | N          |
| embucket      | information_schema | routines        | VIEW       | N          |
| embucket      | information_schema | schemata        | VIEW       | N          |
| embucket      | information_schema | tables          | VIEW       | N          |
| embucket      | information_schema | views           | VIEW       | N          |
| embucket      | public             | first           | TABLE      | Y          |
| embucket      | public             | second          | TABLE      | Y          |
+---------------+--------------------+-----------------+------------+------------+
